資料庫重構 / HTTPAuth/ API cache / API Unit Test
